Update CS Final project.html

--- a/CS Final project.html
+++ b/CS Final project.html
@@ -4,6 +4,7 @@
     </head>
     <body>
         <script>
+            //jaya math.random easy elena math.randon med and hard
             //jaya
             function check(answer,questionAns){
                 if (answer==questionAns){
