Update CS Final project.html

--- a/CS Final project.html
+++ b/CS Final project.html
@@ -23,12 +23,12 @@
                 
             }
             function hard(){
-                //elena
+                //elena math.random
                 let hardQ = []
                 let ansH= []
             }
             function medium(){
-                //elena
+                //elena math.random
                 let mediumQ = ["1. Which two states are not connected to the other states?", "2. Which state does not observe daylight savings time?", "3. Which river system is the longest in the U.S.?", "4. Which state was once an independent republic?", "5. Which state became a state during the Gold Rush?", "6. Which state is called the \"Land of Lincoln \" ?", "7. Which state has the highest population density?", "8. Which state was the first to allow women to vote?",
                      "9. What does Louisiana call its counties?" , "10. Which state is made of two peninsulas?", "11. Which state has produced the most U.S. presidents?", "12. What ocean borders Guam?", "13. What is unique about people born in American Samoa?", "14. Which state is called the \“Mother of Presidents\”?", "15. Which state has the highest average elevation?"
                 ]
