--- a/CS Final project.html
+++ b/CS Final project.html
@@ -39,7 +39,11 @@
                 //jaya
                 let easyQ = ["1. How many U.S. states are there?","2. What is the largest U.S.state by land area?","3. What is the smallest U.S. state?","4. Which state has the largest population?","5. What was the first state to join the United States?","6. Which state is made up entirely of islands?","7. Which state used to be its own country?","8. What is the capital of New York State?","9. Is Washington, D.C. a state?","10. How many stars are on the U.S. flag?","11. Which state is known for having many beaches?","12. Do all states have a state flag?","13. Which state is mostly desert?","14. Which state has more cows than people?"]
                 let ansE = ["1. 50","2. alaska","3. rhode island","4. california","5. delaware","6. hawaii","7. texas","8. albany","9. no","10. 50","11. florida","12. yes","13. nevada","14. montana"]
+                let x = Math.floor(Math.random()*14)
+                let question = charAt(x)
+                let questionAns = charAt(x)
             }
+
             //jaya    
             alert("Welcome To United States Trivia!")
             alert("Here are the rules of our game. You will pick a dificulty level 1, level 2 or level 3. Then baced on your choice you will get a fact and you have to guess the U.S. state or teritorry.\n If you get it correct you will get points:\nlevel 3:3 points\nlevel 2:2 points\nlevel 1: 1 point \nIf you get the question wrong you get 1 point taken away. Your will answer with no capitals.")
