--- a/CS Final project.html
+++ b/CS Final project.html
@@ -47,15 +47,11 @@
 
             //jaya    
             alert("Welcome To United States Trivia!")
-            alert("Here are the rules of our game. You will pick a dificulty level 1, level 2 or level 3. Then baced on your choice you will get a fact and you have to guess the U.S. state or teritorry.\n If you get it correct you will get points:\nlevel 3:3 points\nlevel 2:2 points\nlevel 1: 1 point \nIf you get the question wrong you get 1 point taken away. Your will answer with no capitals.")
+            alert("Here are the rules of our game. You will pick a dificulty level 1, level 2 or level 3. Then baced on your choice you will get a fact and you have to guess the U.S. state or teritorry.\n If you get it correct you will get points:\nlevel 3:3 points\nlevel 2:2 points\nlevel 1: 1 point \nIf you get the question wrong you get 1 point taken away. Your will answer with no capitals if you dont it will count as wrong.")
             let points = 0
-            let questionLev = prompt("What level would you like your first question to be:\n3\n2\n1")
-            if (questionLev==quit || questionLev==Quit){
-
-            }
-            else{
-                parseInt(questionLev)
-            }
+            let questionLev = parseInt(prompt("What level would you like your first question to be:\n3\n2\n1"))
+          
+            
             while (points>=0 && (questionLev != "quit" || questionLev != "Quit")){
                 if (questionLev==1){
                     easy()
@@ -69,7 +65,13 @@
                     hard()
                     check(answer,questionAns)
                 }  
-                questionLev = (prompt("What level would you like your question to be:\n3\n2\n1\nOr would you like to quit"))       
+                questionLev = (prompt("What level would you like your question to be:\n3\n2\n1\nOr would you like to quit")) 
+                if (questionLev==quit || questionLev==Quit){
+
+                }
+                else{
+                    parseInt(questionLev)
+                }    
             }
         </script>
     </body>
