--- a/CS Final project.html
+++ b/CS Final project.html
@@ -13,18 +13,18 @@
                         ansE.splice(x,1)
                     }
                     else if (questionLev==2){
-                        points+=2
+                        points+=3
                         mediumQ.splice(x,1)
                         ansM.splice(x,1)
                     }
                     else if (questionLev==3){
-                        points+=3
+                        points+=5
                         hardQ.splice(x,1)
                         ansH.splice(x,1)
                     }
                 }
                 else if (answer!=questionAns){
-                    points--
+                    points-=2
                 }
                 
             }
@@ -52,7 +52,7 @@
 
             //jaya    
             alert("Welcome To United States Trivia!")
-            alert("Here are the rules of our game. You will pick a dificulty level 1, level 2 or level 3. Then baced on your choice you will get a fact and you have to guess the U.S. state or teritorry.\n If you get it correct you will get points:\nlevel 3:3 points\nlevel 2:2 points\nlevel 1: 1 point \nIf you get the question wrong you get 1 point taken away. Your will answer with no capitals if you dont it will count as wrong.")
+            alert("Here are the rules of our game. You will pick a dificulty level 1, level 2 or level 3. Then baced on your choice you will get a fact and you have to guess the U.S. state or teritorry.\n If you get it correct you will get points:\nlevel 3:5 points\nlevel 2:3 points\nlevel 1: 1 point \nIf you get the question wrong you get 2 point taken away. Your will answer with no capitals if you dont it will count as wrong.")
             let points = 0
             let questionLev = parseInt(prompt("What level would you like your first question to be:\n3\n2\n1"))
             let question =""
