Update CS Final project.html

--- a/CS Final project.html
+++ b/CS Final project.html
@@ -70,7 +70,8 @@
             //elena
             let DON=0
             let qExt=[]
-            let aExt=[]
+            //jaya
+            let aExt=["1.Michigan","2.New Mexico","3.Minnesota","4.Arkansas","5.Kansas","6.Alaska","7.Wisconsin (Lactococcus lactis)","8.Wisconsin","9.Nebraska","10.Montana","11.Hawaii","12.Georgia","13.Arizona","14.Oklahoma","15.Florida"]
             //jaya
             while (points>=0 && (questionLev != "quit" || questionLev != "Quit")){
                 if (questionLev==1){
