Update CS Final project.html

--- a/CS Final project.html
+++ b/CS Final project.html
@@ -28,7 +28,9 @@
                 }
 
 
-                function double()
+                function double(){
+                    
+                }
                 
             }
             function hard(){
