Update CS Final project.html

--- a/CS Final project.html
+++ b/CS Final project.html
@@ -37,6 +37,8 @@
                     let x= parseInt(Math.random()*15)
                     question = qExt[x]
                     questionAns = aExt[x]
+                    //jaya
+                    answer=prompt(question + "dont forget to not use capitals")
 
                 function double(){
                     
@@ -71,7 +73,7 @@
                 easyQ = ["1. How many U.S. states are there?","2. What is the largest U.S.state by land area?","3. What is the smallest U.S. state?","4. Which state has the largest population?","5. What was the first state to join the United States?","6. Which state is made up entirely of islands?","7. Which state used to be its own country?","8. What is the capital of New York State?","9. Is Washington, D.C. a state?","10. How many stars are on the U.S. flag?","11. Which state is known for having many beaches?","12. Do all states have a state flag?","13. Which state is mostly desert?","14. Which state has more cows than people?"]
                 ansE = ["50","alaska","rhode island","california","delaware","hawaii","texas","albany","no","50","florida","yes","nevada","montana"]
                 let x = Math.floor(Math.random()*14)
-                question = alert(easyQ[x])
+                question = easyQ[x]
                 questionAns = ansE[x]
                 
             }
