Update CS Final project.html

--- a/CS Final project.html
+++ b/CS Final project.html
@@ -120,7 +120,7 @@
 
                 }
                 else{
-                    parseInt(questionLev)
+                    questionLev = parseInt(questionLev)
                 }    
                 //elena
                 if(points%3==0){
