Update CS Final project.html

--- a/CS Final project.html
+++ b/CS Final project.html
@@ -9,8 +9,7 @@
                 if (answer==questionAns){
                     if (questionLev==1){
                         points++
-                        easyQ.splice(x,1)
-                        ansE.splice(x,1)
+                        
                     }
                     else if (questionLev==2){
                         points+=3
@@ -107,18 +106,20 @@
             let qExt=[]
             let aExt=[]
             //jaya 
-            while (points>=0 && (isNaN(questionLev))){
+            while (points>=0 && !(isNaN(questionLev))){
                 if (questionLev==1){
                     easy()
                     check(answer,questionAns,points)
+                    easyQ.splice(x,1)
+                    ansE.splice(x,1)
                 }
-                else if (questionLev==2){
+                if (questionLev==2){
                     medium()
                     check(answer,questionAns,points)
                     mediumQ.splice(x,1)
                     ansM.splice(x,1)
                 }
-                else if (questionLev==3){
+                if (questionLev==3){
                     hard()
                     check(answer,questionAns,points)
                     hardQ.splice(x,1)
