--- a/CS Final project.html
+++ b/CS Final project.html
@@ -12,15 +12,15 @@
                         easyQ.splice(x,1)
                         ansE.splice(x,1)
                     }
-                    else if (questionLev==2){
+                    if (questionLev==2){
                         points+=3
                         
                     }
-                    else if (questionLev==3){
+                    if (questionLev==3){
                         points+=5
                     }
                 }
-                else if (answer!=questionAns){
+                if (answer!=questionAns){
                     points-=2
                 }
             }
@@ -125,7 +125,7 @@
                     ansH.splice(x,1)
                 }  
                 questionLev = (prompt("You now have " + points + " points. \nWhat level would you like your question to be:\n3\n2\n1\nOr would you like to quit")) 
-                if (questionLev==quit || questionLev==Quit){
+                if (questionLev== "quit" || questionLev== "Quit"){
 
                 }
                 else{
