Update CS Final project.html

--- a/CS Final project.html
+++ b/CS Final project.html
@@ -18,9 +18,11 @@
                     if (questionLev==3){
                         points+=5
                     }
+                    alert("Correct!")
                 }
                 if (answer!=questionAns){
                     points-=2
+                    alert("Wrong")
                 }
             }
 
