--- a/CS Final project.html
+++ b/CS Final project.html
@@ -12,17 +12,17 @@
                         
                     }
                     if (questionLev==2){
-                        points+=3
+                        points = points + 3
                         
                     }
                     if (questionLev==3){
-                        points+=5
+                        points= points + 5
                     }
                     alert("Correct!")
                 }
                 if (answer!=questionAns){
-                    points-=2
-                    alert("Wrong")
+                    points = points - 2
+                    alert("Wrong!!")
                 }
 
                 return points
