--- a/CS Final project.html
+++ b/CS Final project.html
@@ -137,7 +137,7 @@
                     questionLev = parseInt(questionLev)
                 }    
                 //elena
-                if(points%3==0){
+                if(points%3==0 && points != 0){
                     DON= prompt("You have reached "+points+" , would you like to double the danger? \n You have the rare chance to double or nothing your score. Are you willing to take the chance? \n take it, leave it");
                     if (DON== "take it"){   
                         double()
