Update CS Final project.html

--- a/CS Final project.html
+++ b/CS Final project.html
@@ -113,7 +113,7 @@
             while (points>=0 && !(isNaN(questionLev))){
                 if (questionLev==1){
                     easy()
-                    ponits = check(answer,questionAns,points)
+                    points = check(answer,questionAns,points)
                     easyQ.splice(x,1)
                     ansE.splice(x,1)
                 }
