Update CS Final project.html

--- a/CS Final project.html
+++ b/CS Final project.html
@@ -146,7 +146,7 @@
                     }  
                 }
                  if (points>0){
-                            questionLev = (prompt("You now have " + points + " points. \nWhat level would you like your question to be:\n3\n2\n1\nOr would you like to quit")) 
+                            questionLev = (prompt("You now have " + points + " point(s). \nWhat level would you like your question to be:\n3\n2\n1\nOr would you like to quit")) 
                         }
             }
             if (points<0){
