Update CS Final project.html

--- a/CS Final project.html
+++ b/CS Final project.html
@@ -138,10 +138,10 @@
                 //elena
                 if(points%3==0 && points != 0){
                     DON= prompt("You have reached "+points+" points, would you like to double the danger? \n You have the rare chance to double or nothing your score. Are you willing to take the chance? \n take it, leave it");
-                    if (DON== "take it"){   
+                    if (DON == "take it"){   
                         double()
                         points = doublepointsCheck(points,answer,questionAns)
-                    }else{
+                    }else if (DON == "leave it"){
                         alert("You can't stay safe forever.")
                     }  
                 }
