Update CS Final project.html

--- a/CS Final project.html
+++ b/CS Final project.html
@@ -141,7 +141,7 @@
                     if (DON == "take it"){   
                         double()
                         points = doublepointsCheck(points,answer,questionAns)
-                    }else{
+                    }else if (DON == "leave it"){
                         alert("You can't stay safe forever.")
                     }  
                 }
